--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "knex": "^0.13.0",
+    "mongoose": "^5.2.13",
     "morgan": "^1.9.0",
     "pg": "^7.3.0"
   }
